# mqtt_field_bridge_app

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  deps.json  repo.json  run_linux_web.sh
app/: CMakeLists.txt  Kconfig  prj.conf  prj_wifi_linux_ap.conf
app/boards/: esp32_devkitc_esp32_procpu.overlay
app/src/: bridge_control.c  bridge_control.h  main.c  product_config.c  product_config.h  product_console.c  product_console.h  product_ethernet.c  product_ethernet.h  product_io_bridge.c  product_io_bridge.h  product_runtime.c  product_runtime.h  product_status_io.c  product_status_io.h  product_topics.c  product_topics.h  product_version.h  product_wifi.c  product_wifi.h  provisioning_http.c  provisioning_http.h
app/web/: README.md  app.js  index.html  styles.css
docs/: bridge_wifi_join_plan.md  field_bridge_scenario.md  field_validation_checklist.md  hardware_wifi_validation.md  load_balance_throughput_results.md  memory.md  readme_legacy.md  setup.md  todo.md  todo.yaml  versioning.md  wifi_bridge_test_status.md
docs/releases/: bridge-v0.1.12.md
scripts/: build_product.sh  build_provisioning_web.js  build_wifi_bridge_product.sh  enable_wifi_eth_mqtt_route.sh  hw_dual_w5500_cli_bridge_test.sh  hw_dual_w5500_netcheck.sh  hw_esp32_console.sh  hw_esp32_flash_monitor.sh  hw_esp32_homepage_test.sh  hw_esp32_scan_test.sh  hw_linux_ap_broker_bridge_test.sh  hw_linux_ap_broker_stop.sh  hw_prepare_six_eth_config.sh  hw_safe_eth_health_check.sh  hw_wifi_bridge_test.sh  install_network_test_tools.sh  serial_menu_client.sh  setup.sh  sync_deps.sh
tests/linux/: Makefile  README.md  fallback_listener_broker.c  fallback_mqtt_client.sh  load_balance_throughput.py  run_dynamic_balance_burst.sh  run_fair4_admission2.sh  run_fair4_capacity_compare.sh  run_fixed_failure_recovery.py  run_load_balance_matrix.sh  run_random_drop_recovery.sh  run_topic_limit_burst.sh  run_web_config_server.c  run_web_config_server.sh  stress_reconnect.sh  stress_throughput.sh  test_3node_scenario.sh  test_bridge_wifi_join_sim.sh  test_chain_scale.sh  test_dual_esp32_admission_fallback.sh  test_dual_esp32_w5500_bridge.sh  test_esp32_config_save_reboot.sh  test_esp32_linux_admission_fallback.sh  test_esp32_linux_chain_bridge.sh  test_esp32_linux_esp32_bridge.sh  test_esp32_network_bind.sh  test_fallback_mqtt_client.sh  test_provisioning_render_size.sh  test_sync_deps.sh  test_web_network_config.sh  test_wifi_linux_ap_esp32_bridge.sh  test_with_testkit.sh  trigger_testkit.sh  ui_browser_test.js  unit_bridge_control.c  unit_product_config.c  unit_product_console.c  unit_product_io_bridge.c  (+3 more)
(+3 files in other folders)
